# FinanceMate

./: .dockerignore  .gitignore  DEPLOYMENT.md  Dockerfile  README.md  alembic.ini  docker-compose.prod.yml  docker-compose.yml  nginx.conf  prometheus.yml  pyproject.toml  service-worker.js
.github/workflows/: ci-cd.yml  ci.yml
alembic/: env.py  script.py.mako
alembic/versions/: 20250609_add_currency_to_budget.py  259d1c8971ae_init.py  43ceefeb6492_add_avatar_field_to_user.py  4a2d87c171df_create_users_table.py  76dce5d69ad8_init_schema.py  99d62aae396b_change_or_cteate_table_s.py  a13618bcdd61_fix_exchange_rates_primary_key.py  a28c80f78c3b_init.py  b69f29217934_create_users_table.py  c3583db888b0_create_users_table.py  cf315accd753_create_users_table.py  cf3ac488a287_create_users_table.py  fbaed2dfa947_init.py
app/: main.py  worker.py
app/api/v1/: budget.py  user.py  (+4 more)
app/core/: celery_config.py  config.py  security.py
app/crud/: budget.py  category.py  notification.py  transaction.py  user.py
app/db/: session.py  syncsess.py
app/models/: user.py
app/schemas/: budget.py  category.py  notification.py  transaction.py  user.py
app/services/: budget.py  curency.py  report.py
app/tasks/: budget.py  exchangerate.py  notification.py
frontend/: api.js  auth.js  budgets.js  categories.js  chart-utils.js  currency.js  index.html  main.js  manifest.json  notifications.js  package-lock.json  package.json  reports.js  service-worker.js  style.css  tableUtils.js  transactions.js  ui.js
frontend/__tests__/: transactions.test.js
tests/: __init__.py  conftest.py  test_budget.py  test_category.py  test_category_logging.py  test_celery.py  test_transaction.py  test_user.py
(+7 files in other folders)
