[tool.poetry]
name= "FinanceMate"
version= "0.1.0"
description= ""
authors= []
package-mode= false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["all"], version = "^0.115.12"}
sqlalchemy = {extras = ["asyncio"], version = "^2.0.41"}
asyncpg = "^0.30.0"
alembic = "^1.16.1"
pydantic = "^2.11.5"
python-jose = "^3.5.0"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
bcrypt = "^4.0.0"
python-dotenv = "^1.1.0"
loguru = "^0.7.3"
uvicorn = "^0.34.3"
celery = {extras = ["redis"], version = "^5.5.3"}
psycopg2-binary = "^2.9.10"
pytest-asyncio = "^1.0.0"
asgi-lifespan = "^2.1.0"
httpx = "^0.28.1"
aiosqlite = "^0.21.0"
fastapi-limiter = "^0.1.6"
redis = "^5.0.4"
sentry-sdk = "^2.29.1"
prometheus-fastapi-instrumentator = "^7.1.0"
setuptools = "^80.9.0"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
isort = "^6.0.1"
mypy = "^1.16.0"
flake8 = "^7.2.0"
pytest = "^8.4.0"
pytest-asyncio = "^1.0.0"


